--- a/src/app/components/toolbar/toolbar.component.html
+++ b/src/app/components/toolbar/toolbar.component.html
@@ -1,16 +1,15 @@
 <mat-toolbar color="primary" class="turnos-toolbar mat-elevation-z2">
     <mat-toolbar-row>
-        
-        <i class="material-icons orange600 md-36 m-3" (click)="toggle()">menu</i>
-        
+
+        <mat-icon (click)="toggle('sidenav')">menu</mat-icon>
         <span class="example-spacer"></span>
 
-        <span>Desk</span>
+        <span>WebTurnos</span>
         <span class="example-spacer"></span>
 
-        <mat-icon class="example-icon" aria-hidden="false" aria-label="Example user verified icon">verified_user
-        </mat-icon>
-        <span>Public</span>
+        <button (click)="toggle('chat')" mat-mini-fab>
+            <mat-icon>chat</mat-icon>
+        </button>
 
     </mat-toolbar-row>
 </mat-toolbar>
