--- a/src/app/pages/publico/publico.component.html
+++ b/src/app/pages/publico/publico.component.html
@@ -1,5 +1,5 @@
 <div class="row p-3">
-
+    
     <div class="col-md-6">
 
         <!-- ======================================================== -->
@@ -35,7 +35,7 @@
                         </div>
                     </div>
 
-                    <!-- CHAT -->
+                    <!-- CHAT
                     <div class="row">
                         <div class="col-8">
                             <input #InputMessage type="text" class="w-100">
@@ -44,7 +44,7 @@
                         <div class="col-4">
                             <button class="btn btn-danger btn-block" (click)="sendMessage(InputMessage)">Enviar</button>
                         </div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </div>
@@ -147,7 +147,7 @@
                     </div>
                 </div>
             </div>
-
         </div>
     </div>
+
 </div>
