--- a/src/app/pages/escritorio/escritorio.component.html
+++ b/src/app/pages/escritorio/escritorio.component.html
@@ -42,13 +42,15 @@
 
         <div class="card bg-danger text-white my-4 py-2" *ngIf='message'>{{message}}</div>
 
-        <div class="p-2">
+        <div class="p-2 d-flex">
           <button class="btn btn-success btn-block btn-lg" (click)="atenderTicket()">
-            ATENDER CLIENTE
+            Próximo
+          </button>
+
+          <button class="btn btn-success btn-block btn-lg" (click)="atenderTicket()">
+            Finalizar
           </button>
         </div>
-
-
       </div>
     </div>
   </div>
