--- a/src/styles.css
+++ b/src/styles.css
@@ -3,13 +3,15 @@
 html, body { height: 100%; }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 button:focus { outline: none; }
-
+textarea:focus { outline: none; }
+input:focus { outline: none; }
 .banner-content {
     font-weight: 100;
     line-height: normal;
     padding: .1em;
     font-size: x-large;
     justify-content: center;
+    margin: 0.3rem;
 }
 
 .banner-content .xxxxl {
