--- a/src/app/pages/publico/publico.component.html
+++ b/src/app/pages/publico/publico.component.html
@@ -6,7 +6,7 @@
         <!-- SU TURNO FINALIZADO -->
         <!-- ======================================================== -->
 
-        <div class="card text-white bg-danger mb-4" *ngIf="ticketsService.myTicket_end">
+        <div class="card text-white bg-danger mb-4" *ngIf="!ticketsService.myTicket">
             <div class="card-header banner-title">TURNO FINALIZADO </div>
             <div class="rounded text-center banner-content" style="background-color: rgb(141, 51, 51)">
 
@@ -44,6 +44,11 @@
                     <div class="row">
                         <div class="col xxxxl">
                             {{ ticketsService.myTicket.id_desk }}
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col">
+                            <button class="btn btn-warning btn-lg" (click)="enCamino()">En camino!</button>
                         </div>
                     </div>
                 </div>
