--- a/src/styles.css
+++ b/src/styles.css
@@ -5,22 +5,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 button:focus { outline: none; }
 textarea:focus { outline: none; }
 input:focus { outline: none; }
-.banner-content {
-    font-weight: 100;
-    line-height: normal;
-    padding: .1em;
-    font-size: x-large;
-    justify-content: center;
-    margin: 0.3rem;
-}
-
-.banner-content .xxxxl {
-    font-size: 3em;
-}
-
-.banner-content .xxxl {
-    font-size: xxx-large;
-}
 
 .banner-title {
     font-size: x-large;
@@ -33,4 +17,29 @@ input:focus { outline: none; }
     font-family: unset;
     font-weight: 100;
     line-height: normal;
+}
+
+.banner-content {
+    border-radius: 0.3rem;
+    text-align: center;
+    font-weight: 100;
+    line-height: normal;
+    font-size: x-large;
+    justify-content: center;
+    margin: .3rem;
+}
+
+.banner-footer {
+    padding: 0.3rem;
+    font-size: large;
+    background-color: forestgreen;
+    border-top: solid .1rem limegreen;
+    font-weight: 500;
+}
+.banner-content .xxxxl {
+    font-size: 3em;
+}
+
+.banner-content .xxxl {
+    font-size: xxx-large;
 }
